# finai-tracker

./: .editorconfig  .gitignore  .pre-commit-config.yaml
backend/: pyproject.toml
backend/app/models/: __init__.py  account.py  asset.py  base.py  position.py  taxonomy.py  transaction.py
